--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -10,7 +10,7 @@ body {
     background-color: #d9dcd6;
 }
 
-.header {
+header {
     padding: 20px;
     font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
     background-color: #2a607c;
@@ -18,12 +18,12 @@ body {
 }
 
 /* Company logo */
-.header h1 {
+header h1 {
     display: inline-block;
     font-size: 48px;
 }
 
-.header h1 .seo {
+header h1 .seo {
     color: #d9dcd6;
 }
 
@@ -95,24 +95,24 @@ p {
 }
 
 /* Aside block formatting */
-.benefits div {
+.benefits section {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefits div h3 {
+.benefits section h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefits div img {
+.benefits section img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
 }
 
 /* Content block formatting */
-.content div {
+.content section {
     margin-bottom: 20px;
     padding: 50px;
     height: 300px;
@@ -121,11 +121,11 @@ p {
     color: #ffffff;
 }
 
-.content div img {
+.content section img {
     max-height: 200px;
 }
 
-.content div h2 {
+.content section h2 {
     margin-bottom: 20px;
     font-size: 36px;
 }
