--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -28,7 +28,7 @@ header h1 .seo {
 }
 
 /* Right aligned navigation */
-.navigation {
+nav {
     padding-top: 15px;
     margin-right: 20px;
     float: right;
@@ -36,11 +36,11 @@ header h1 .seo {
     font-size: 20px;
 }
 
-.navigation ul {
+nav ul {
     list-style-type: none;
 }
 
-.navigation ul li {
+nav ul li {
     display: inline-block;
     margin-left: 25px;
 }
