--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,6 +17,16 @@ header {
     color: #ffffff;
 }
 
+/* Default links and text */
+a {
+    color: #ffffff;
+    text-decoration: none;
+}
+
+p {
+    font-size: 16px;
+}
+
 /* Company logo */
 header h1 {
     display: inline-block;
@@ -46,16 +56,6 @@ nav ul li {
     margin-left: 25px;
 }
 
-/* Default links and text */
-a {
-    color: #ffffff;
-    text-decoration: none;
-}
-
-p {
-    font-size: 16px;
-}
-
 /* Background image for main splash page */
 #mainBackground {
     height: 800px;
@@ -70,6 +70,25 @@ p {
     width: 75%;
     display: inline-block;
     margin-left: 20px;
+}
+
+/* Content block formatting */
+.content article {
+    margin-bottom: 20px;
+    padding: 50px;
+    height: 300px;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    background-color: #0072bb;
+    color: #ffffff;
+}
+
+.content article img {
+    max-height: 200px;
+}
+
+.content article h2 {
+    margin-bottom: 20px;
+    font-size: 36px;
 }
 
 /* Used for embedded images */
@@ -96,39 +115,20 @@ p {
 }
 
 /* Aside block formatting */
-.benefits section {
+.benefits article {
     margin-bottom: 32px;
     color: #ffffff;
 }
 
-.benefits section h3 {
+.benefits article h3 {
     margin-bottom: 10px;
     text-align: center;
 }
 
-.benefits section img {
+.benefits article img {
     display: block;
     margin: 10px auto;
     max-width: 150px;
-}
-
-/* Content block formatting */
-.content section {
-    margin-bottom: 20px;
-    padding: 50px;
-    height: 300px;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    background-color: #0072bb;
-    color: #ffffff;
-}
-
-.content section img {
-    max-height: 200px;
-}
-
-.content section h2 {
-    margin-bottom: 20px;
-    font-size: 36px;
 }
 
 footer {
